--- a/app/src/main/res/layout/activity_face_detect.xml
+++ b/app/src/main/res/layout/activity_face_detect.xml
@@ -17,12 +17,12 @@
             android:elevation="0dp" />
 
         <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/navHostFaceDetect"
+            android:id="@+id/navHost"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:defaultNavHost="true"
-            app:navGraph="@navigation/nav_face_detect" />
+            app:navGraph="@navigation/nav_main" />
 
     </LinearLayout>
 
