--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -1,24 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_main"
-    app:startDestination="@id/mainFragment">
+    app:startDestination="@id/takeFacePhotoFragment">
 
     <fragment
-        android:id="@+id/mainFragment"
-        android:name="com.ducpv.MainFragment"
-        android:label="MainFragment"
-        tools:layout="@layout/fragment_main">
+        android:id="@+id/takeFacePhotoFragment"
+        android:name="com.ducpv.module.facedetect.TakeFacePhotoFragment"
+        android:label="TakeFacePhoto">
+
         <action
-            android:id="@+id/action_mainFragment_to_faceDetectActivity"
-            app:destination="@id/faceDetectActivity" />
+            android:id="@+id/action_takeFacePhotoFragment_to_previewPhotoFragment"
+            app:destination="@id/previewPhotoFragment"
+            app:enterAnim="@anim/slide_from_right"
+            app:exitAnim="@anim/slide_to_left"
+            app:popEnterAnim="@anim/slide_from_left"
+            app:popExitAnim="@anim/slide_to_right"
+            app:popUpTo="@id/takeFacePhotoFragment"
+            app:popUpToInclusive="true" />
+
     </fragment>
 
-    <activity
-        android:id="@+id/faceDetectActivity"
-        android:name="com.ducpv.module.facedetect.FaceDetectActivity"
-        android:label="faceDetectActivity"
-        tools:layout="@layout/activity_face_detect" />
+    <fragment
+        android:id="@+id/previewPhotoFragment"
+        android:name="com.ducpv.module.facedetect.PreviewPhotoFragment"
+        android:label="PreviewPhoto">
+
+        <argument
+            android:name="image"
+            app:argType="java.io.File" />
+
+    </fragment>
 
 </navigation>
